--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a66ac6bd-b29b-48b6-9cf8-e5dd33f2e767",
    "metadata": {},
    "outputs": [],
@@ -31,10 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "04e44b36-4f11-4ed5-81b3-d1612186a830",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/miaochangjiu/kNN-overlap-finder/scripts/../lib\n"
+     ]
+    }
+   ],
    "source": [
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
     "from dim_reduction import SpectralEmbedding, scBiMapEmbedding\n",
@@ -47,6 +55,7 @@
     "    HNSW,\n",
     "    ProductQuantization,\n",
     "    _NearestNeighbors,\n",
+    "    IVFProductQuantization,\n",
     ")\n",
     "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f51d1d2b-7df2-4747-baa0-e2f8adaf8d56",
    "metadata": {},
    "outputs": [],
@@ -83,14 +92,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7ae58181-508b-4162-a3a0-33b45ae40fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'snakemake' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sample \u001b[38;5;241m=\u001b[39m snakemake\u001b[38;5;241m.\u001b[39mwildcards[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m dataset \u001b[38;5;241m=\u001b[39m snakemake\u001b[38;5;241m.\u001b[39mwildcards[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplatform\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m region \u001b[38;5;241m=\u001b[39m snakemake\u001b[38;5;241m.\u001b[39mwildcards[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mregion\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'snakemake' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "with open('all_configs.json', 'r') as file:  \n",
+    "    configs_dict = json.load(file)  \n",
+    "\n",
     "sample = snakemake.wildcards['sample']\n",
     "dataset = snakemake.wildcards['platform']\n",
     "region = snakemake.wildcards['region']\n",
+    "method = snakemake.wildcard['method']\n",
+    "config = configs_dict[method]\n",
     "\n",
     "npz_path = snakemake.input['feature_matrix']\n",
     "tsv_path = snakemake.input['metadata']\n",
@@ -223,314 +249,8 @@
     "kw = dict(data=feature_matrix)\n",
     "max_bucket_size = COVERAGE_DEPTH * 1.5\n",
     "\n",
-    "configs = [\n",
-    "    \n",
-    "    # Minimap2 all-vs-all\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=PAFNearestNeighbors,\n",
-    "        description=\"Minimap2 all-vs-all\",\n",
-    "        nearest_neighbors_kw=dict(paf_path=paf_path, read_indices=read_indices),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    \n",
-    "    # DimReduction + HNSW \n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=HNSW,\n",
-    "        description=\"HNSW (IDF, Spectral 100 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=HNSW,\n",
-    "        description=\"HNSW (IDF, Spectral 500 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=HNSW,\n",
-    "        description=\"HNSW (IDF, scBiMap 100 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=scBiMapEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=HNSW,\n",
-    "        description=\"HNSW (IDF, scBiMap 500 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=scBiMapEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=HNSW,\n",
-    "        description=\"HNSW (TF-IDF, Spectral 100 dim.)\",\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=HNSW,\n",
-    "        description=\"HNSW (TF-IDF, scBiMap 100 dim.)\",\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=scBiMapEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    # LowHash\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=LowHash,\n",
-    "        description=\"LowHash (binary)\",\n",
-    "        tfidf=False,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=LowHash,\n",
-    "        description=\"MinHash (binary)\",\n",
-    "        tfidf=False,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_count=20,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    \n",
-    "    # Weighted LowHash\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=WeightedLowHash,\n",
-    "        description=\"Weighted LowHash (TF)\",\n",
-    "        tfidf=False,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=WeightedLowHash,\n",
-    "        description=\"Weighted LowHash (IDF)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=WeightedLowHash,\n",
-    "        description=\"Weighted LowHash (TF-IDF)\",\n",
-    "        tfidf=True,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    \n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=WeightedLowHash,\n",
-    "        description=\"Weighted MinHash (TF)\",\n",
-    "        tfidf=False,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_count=20,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=WeightedLowHash,\n",
-    "        description=\"Weighted MinHash (IDF)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_count=20,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=WeightedLowHash,\n",
-    "        description=\"Weighted MinHash (TF-IDF)\",\n",
-    "        tfidf=True,\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "            lowhash_count=20,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
-    "]\n",
-    "\n",
-    "\n",
-    "small_data_configs = [\n",
-    "    # PQ\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ProductQuantization,\n",
-    "        description=\"PQ (IDF, 100 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(nbits=6),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ProductQuantization,\n",
-    "        description=\"PQ (TF-IDF, 100 dim.)\",\n",
-    "        binarize=False,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(nbits=6),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    # NNdescent\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=NNDescent,\n",
-    "        description=\"NNdescent (IDF)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=None,\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=NNDescent,\n",
-    "        description=\"NNdescent (TF-IDF)\",\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=None,\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    # Exact Euclidean\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (binary)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=False,\n",
-    "        dimension_reduction_method=None,\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF)\",\n",
-    "        tfidf=False,\n",
-    "        dimension_reduction_method=None,\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (IDF)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=None,\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF)\",\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=None,\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (IDF, Spectral 100 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (IDF, Spectral 500 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF, Spectral 100 dim.)\",\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=SpectralEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (IDF, scBiMap 100 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=scBiMapEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (IDF, scBiMap 500 dim.)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=scBiMapEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF, scBiMap 100 dim.)\",\n",
-    "        tfidf=True,\n",
-    "        dimension_reduction_method=scBiMapEmbedding,\n",
-    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
-    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "]\n",
+    "with open('all_configs.json', 'r') as file:  \n",
+    "    configs_dict = json.load(file)  \n",
     "\n",
     "if feature_matrix.shape[0] <= 20_000:\n",
     "    configs += small_data_configs"
@@ -806,9 +526,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -820,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
