--- a/notebooks/dim_reduction/dim_reduction.py.ipynb
+++ b/notebooks/dim_reduction/dim_reduction.py.ipynb
@@ -822,9 +822,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
