contract config_dict,not done

--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -108,14 +108,12 @@
     }
    ],
    "source": [
-    "with open('workflow/notebooks/all_configs.json', 'r') as file:  \n",
-    "    configs_dict = json.load(file)  \n",
     "\n",
     "sample = snakemake.wildcards['sample']\n",
     "dataset = snakemake.wildcards['platform']\n",
     "region = snakemake.wildcards['region']\n",
     "method = snakemake.wildcards['method']\n",
-    "config = configs_dict[method]\n",
+    "\n",
     "\n",
     "npz_path = snakemake.input['feature_matrix']\n",
     "tsv_path = snakemake.input['metadata']\n",
@@ -174,15 +172,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee313d87-069a-4cc3-9c8c-45a834ff2411",
+   "id": "1aa2d13b-23f2-46d9-91cd-3051c0b36fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "kw = dict(data=feature_matrix)\n",
     "max_bucket_size = COVERAGE_DEPTH * 1.5\n",
+    "max_n_neighbors = COVERAGE_DEPTH\n",
     "\n",
-    "if feature_matrix.shape[0] <= 20_000:\n",
-    "    configs += small_data_configs"
+    "find_neighbor_method = []\n",
+    "methods = ['Exact_Euclidean','Exact_Cosine',\n",
+    "          'NNDescent_Euclidean','PQ_Euclidean','PQ_Cosine','HNSW_Euclidean','HNSW_Cosine',\n",
+    "          'LowHash_Jaccard','WeightedLowHash_Jaccard']\n",
+    "dim_redu_method = ['Spectural_100d','Spectural_500d','scBiMap_100d','scBiMap_500d','None']\n",
+    "pre_process = ['TF','IDF','TF-IDF','None']\n",
+    "for a in methods:\n",
+    "    for b in dim_redu_method:\n",
+    "        for c in pre_process:\n",
+    "            simple_name = '_'.join([a,b,c])\n",
+    "            find_neighbor_method.append(simple_name)\n",
+    "\n",
+    "simple_to_complete = {'Exact':'ExactNearestNeighbors',\n",
+    "      'PQ':'ProductQuantization',\n",
+    "      'scBiMap':'scBiMapEmbedding',\n",
+    "      'Spectural':'SpectralEmbedding',      \n",
+    "      '100d':'100',\n",
+    "      '500d':'500'}\n",
+    "to_fx = {'ExactNearestNeighbors':ExactNearestNeighbors,\n",
+    "      'ProductQuantization':ProductQuantization,\n",
+    "      'NNDescent':NNDescent,\n",
+    "      'WeightedLowHash':WeightedLowHash,\n",
+    "      'LowHash':LowHash,\n",
+    "      'HNSW':HNSW,\n",
+    "      'scBiMap':scBiMapEmbedding,\n",
+    "      'Spectural':SpectralEmbedding,      \n",
+    "      '100d':100,\n",
+    "      '500d':500}\n",
+    "config_dict = {}\n",
+    "for method_index in range(len(find_neighbor_method)):\n",
+    "    #print(simple_name)\n",
+    "    simple_name = find_neighbor_method[method_index]\n",
+    "    simple_name_list = simple_name.split('_')\n",
+    "    for i in range(len(simple_name_list)):\n",
+    "        if simple_name_list[i] in simple_to_complete:\n",
+    "            simple_name_list[i] = simple_to_complete[simple_name_list[i]]\n",
+    "    complete_name = simple_name_list\n",
+    "    des = ','.join(complete_name)\n",
+    "    if 'Hash' in complete_name[0] and complete_name[2] == 'None':\n",
+    "        config = NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=to_fx[complete_name[0]],\n",
+    "        description=des,\n",
+    "        tfidf=complete_name[3],\n",
+    "        nearest_neighbors_kw=dict(\n",
+    "        lowhash_fraction=0.01,\n",
+    "        max_bucket_size=max_bucket_size,\n",
+    "        repeats=100,\n",
+    "        seed=458,\n",
+    "        ),\n",
+    "        **kw)\n",
+    "        config_dict[find_neighbor_method[method_index]] = config\n",
+    "        #print(method_index)\n",
+    "        #print(find_neighbor_method[method_index])\n",
+    "        #print(config)\n",
+    "    elif complete_name[0] in ['HNSW','ProductQuantization','NNdescent','ExactNearestNeighbors']:\n",
+    "        if complete_name[2] == 'None':\n",
+    "            config = NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=to_fx[complete_name[0]],\n",
+    "            description=des,\n",
+    "            tfidf=complete_name[3],\n",
+    "            nearest_neighbors_kw=dict(metric=complete_name[1].lower()),\n",
+    "            **kw) \n",
+    "        else:\n",
+    "            config = NearestNeighborsConfig(\n",
+    "            nearest_neighbors_method=to_fx[complete_name[0]],\n",
+    "            description=des,\n",
+    "            tfidf=complete_name[4],\n",
+    "            dimension_reduction_method=complete_name[2],\n",
+    "            dimension_reduction_kw=dict(n_dimensions=complete_name[3]),\n",
+    "            nearest_neighbors_kw=dict(metric=complete_name[1].lower()),\n",
+    "            **kw) \n",
+    "        config_dict[find_neighbor_method[method_index]] = config\n"
    ]
   },
   {
@@ -192,11 +261,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
-    "max_n_neighbors = COVERAGE_DEPTH\n",
     "processes = threads\n",
+    "config = config_dict[method]\n",
     "configs = [config]\n",
+    "kw = dict(data=feature_matrix)\n",
     "\n",
     "nbr_dict, time_dict, memory_dict = mp_compute_nearest_neighbors(\n",
     "    data=feature_matrix,\n",
@@ -205,7 +273,8 @@
     "    processes=processes,\n",
     ")\n",
     "\n",
-    "sp.save_npz(nbr_path, nbr_dict)\n"
+    "\n",
+    "np.savez(nbr_path, nbr_dict)"
    ]
   },
   {
