complete config_dict

--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -180,78 +180,8 @@
     "max_bucket_size = COVERAGE_DEPTH * 1.5\n",
     "max_n_neighbors = COVERAGE_DEPTH\n",
     "\n",
-    "find_neighbor_method = []\n",
-    "methods = ['Exact_Euclidean','Exact_Cosine',\n",
-    "          'NNDescent_Euclidean','PQ_Euclidean','PQ_Cosine','HNSW_Euclidean','HNSW_Cosine',\n",
-    "          'LowHash_Jaccard','WeightedLowHash_Jaccard']\n",
-    "dim_redu_method = ['Spectural_100d','Spectural_500d','scBiMap_100d','scBiMap_500d','None']\n",
-    "pre_process = ['TF','IDF','TF-IDF','None']\n",
-    "for a in methods:\n",
-    "    for b in dim_redu_method:\n",
-    "        for c in pre_process:\n",
-    "            simple_name = '_'.join([a,b,c])\n",
-    "            find_neighbor_method.append(simple_name)\n",
-    "\n",
-    "simple_to_complete = {'Exact':'ExactNearestNeighbors',\n",
-    "      'PQ':'ProductQuantization',\n",
-    "      'scBiMap':'scBiMapEmbedding',\n",
-    "      'Spectural':'SpectralEmbedding',      \n",
-    "      '100d':'100',\n",
-    "      '500d':'500'}\n",
-    "to_fx = {'ExactNearestNeighbors':ExactNearestNeighbors,\n",
-    "      'ProductQuantization':ProductQuantization,\n",
-    "      'NNDescent':NNDescent,\n",
-    "      'WeightedLowHash':WeightedLowHash,\n",
-    "      'LowHash':LowHash,\n",
-    "      'HNSW':HNSW,\n",
-    "      'scBiMap':scBiMapEmbedding,\n",
-    "      'Spectural':SpectralEmbedding,      \n",
-    "      '100d':100,\n",
-    "      '500d':500}\n",
-    "config_dict = {}\n",
-    "for method_index in range(len(find_neighbor_method)):\n",
-    "    #print(simple_name)\n",
-    "    simple_name = find_neighbor_method[method_index]\n",
-    "    simple_name_list = simple_name.split('_')\n",
-    "    for i in range(len(simple_name_list)):\n",
-    "        if simple_name_list[i] in simple_to_complete:\n",
-    "            simple_name_list[i] = simple_to_complete[simple_name_list[i]]\n",
-    "    complete_name = simple_name_list\n",
-    "    des = ','.join(complete_name)\n",
-    "    if 'Hash' in complete_name[0] and complete_name[2] == 'None':\n",
-    "        config = NearestNeighborsConfig(\n",
-    "        nearest_neighbors_method=to_fx[complete_name[0]],\n",
-    "        description=des,\n",
-    "        tfidf=complete_name[3],\n",
-    "        nearest_neighbors_kw=dict(\n",
-    "        lowhash_fraction=0.01,\n",
-    "        max_bucket_size=max_bucket_size,\n",
-    "        repeats=100,\n",
-    "        seed=458,\n",
-    "        ),\n",
-    "        **kw)\n",
-    "        config_dict[find_neighbor_method[method_index]] = config\n",
-    "        #print(method_index)\n",
-    "        #print(find_neighbor_method[method_index])\n",
-    "        #print(config)\n",
-    "    elif complete_name[0] in ['HNSW','ProductQuantization','NNdescent','ExactNearestNeighbors']:\n",
-    "        if complete_name[2] == 'None':\n",
-    "            config = NearestNeighborsConfig(\n",
-    "            nearest_neighbors_method=to_fx[complete_name[0]],\n",
-    "            description=des,\n",
-    "            tfidf=complete_name[3],\n",
-    "            nearest_neighbors_kw=dict(metric=complete_name[1].lower()),\n",
-    "            **kw) \n",
-    "        else:\n",
-    "            config = NearestNeighborsConfig(\n",
-    "            nearest_neighbors_method=to_fx[complete_name[0]],\n",
-    "            description=des,\n",
-    "            tfidf=complete_name[4],\n",
-    "            dimension_reduction_method=complete_name[2],\n",
-    "            dimension_reduction_kw=dict(n_dimensions=complete_name[3]),\n",
-    "            nearest_neighbors_kw=dict(metric=complete_name[1].lower()),\n",
-    "            **kw) \n",
-    "        config_dict[find_neighbor_method[method_index]] = config\n"
+    "with open('workflow/notebooks/config_dict.pkl', 'rb') as file:  \n",
+    "    config_dict = pickle.load(file)  "
    ]
   },
   {
@@ -272,7 +202,6 @@
     "    n_neighbors=max_n_neighbors,\n",
     "    processes=processes,\n",
     ")\n",
-    "\n",
     "\n",
     "np.savez(nbr_path, nbr_dict)"
    ]
